<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="pref_title_default_page">Default Page</string>
    <string name="pref_title_ask_sim">Should ask for sim</string>
    <string name="pref_title_dialpad_tones">Dialpad click tones</string>
    <string name="pref_title_group_recents">Group similar recents</string>
    <string name="pref_title_incoming_call_mode">Incoming Call Mode</string>
    <string name="pref_title_dialpad_vibrate">Vibrate on dialpad clicks</string>
    <string name="content_description_dialer_button">dialer button</string>
</resources>