<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_koler_default_page"
        android:icon="@drawable/view_carousel"
        android:title="@string/pref_title_default_page" />

    <item
        android:id="@+id/menu_koler_dialpad_tones"
        android:icon="@drawable/music_note"
        android:title="@string/pref_title_dialpad_tones" />

    <item
        android:id="@+id/menu_koler_dialpad_vibrate"
        android:icon="@drawable/vibration"
        android:title="@string/pref_title_dialpad_vibrate" />

    <item
        android:id="@+id/menu_koler_group_recents"
        android:icon="@drawable/recent_actors"
        android:title="@string/pref_title_group_recents" />

    <item
        android:id="@+id/menu_koler_clear_recents"
        android:icon="@drawable/delete"
        android:title="@string/action_clear_recents" />

    <item
        android:id="@+id/menu_koler_incoming_call_mode"
        android:icon="@drawable/phone_msg"
        android:title="@string/pref_title_incoming_call_mode" />
</menu>